fix scrollbar shifting

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -55,6 +55,10 @@
         scroll-behavior: smooth;
     }
 
+    html {
+        scrollbar-gutter: stable;
+    }
+
     body {
         @apply bg-background text-foreground tracking-wide;
         font-family: "Handjet", sans-serif;
